CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)
SET(TARGET csvFilter)
PROJECT(${TARGET})
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR} ${CMAKE_MODULE_PATH})

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

# CODE FILES
SET(HEADER_CODE
	csvFilter.h
	csvModel.h
	QPathEdit.h
)

SET(SOURCE_CODE
	main.cpp
	csvFilter.cpp
	csvModel.cpp
	QPathEdit.cpp
)

# QT
SET(QTDIR $ENV{QTDIR32})
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${QTDIR})

FIND_PACKAGE(Qt5Core)
IF(Qt5Core_FOUND)
	SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${Qt5Core_INCLUDE_DIRS})
	SET(LIBRARIES ${LIBRARIES} ${Qt5Core_LIBRARIES})
ENDIF()

FIND_PACKAGE(Qt5Gui)
IF(Qt5Gui_FOUND)
	SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${Qt5Gui_INCLUDE_DIRS})
	SET(LIBRARIES ${LIBRARIES} ${Qt5Gui_LIBRARIES})
ENDIF()

FIND_PACKAGE(Qt5Widgets)
IF(Qt5Widgets_FOUND)
	SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${Qt5Widgets_INCLUDE_DIRS})
	SET(LIBRARIES ${LIBRARIES} ${Qt5Widgets_LIBRARIES})
ENDIF()

# RESOURCES
QT5_ADD_RESOURCES(RESOURCES resources.qrc)

# VS FILTERS
SOURCE_GROUP("Generated" REGULAR_EXPRESSION \(.*_automoc.cpp\|.*_resources.cpp\))
SOURCE_GROUP("Resources" REGULAR_EXPRESSION \(.*.qrc\|.*.rc\))
 
# TARGET
INCLUDE_DIRECTORIES(${INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/include)

ADD_EXECUTABLE(${TARGET} WIN32 ${HEADER_CODE} ${SOURCE_CODE} ${RESOURCES} resources.rc)

TARGET_LINK_LIBRARIES(${TARGET} ${LOGITECH_LIBRARY} ${LIBRARIES})

# COPY QT DLLS
ADD_CUSTOM_COMMAND(TARGET ${TARGET} POST_BUILD COMMAND "${QTDIR}/bin/windeployqt.exe" "${EXECUTABLE_OUTPUT_PATH}/$<CONFIG>/${TARGET}${CMAKE_EXECUTABLE_SUFFIX}" --no-translations --no-quick-import)

# INSTALLER
INSTALL(DIRECTORY "${EXECUTABLE_OUTPUT_PATH}/Release/" DESTINATION bin COMPONENT application)

set(CPACK_PACKAGE_NAME "csvFilter")
set(CPACK_PACKAGE_VENDOR "Menari Softworks")

set(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/License.txt")
SET(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README.txt")
SET(CPACK_PACKAGE_FILE_NAME "csvFilter-Installer")

set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "CSV Filter - a simple GUI for doing advanced .csv file filtering")
set(CPACK_PACKAGE_VERSION "1.0.0")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL "ON")

INCLUDE(CPack)